# haskell-pdf-presenter

./: .hgignore  ANNOUNCE  CHANGELOG  HaskellPdfPresenter.glade  HaskellPdfPresenter.hs  Makefile  PdfViewer.hs  README  SCRAP  TODO  haskell-pdf-presenter.cabal  package.yaml  pdf-presenter.cabal  presenter.glade  stack.yaml
