-- The name of the package.
Name:                haskell-pdf-presenter

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.2

-- A short (one-line) description of the package.
Synopsis:            Tool for presenting PDF based presentations.

-- A longer description of the package.
Description:         This application is a viewer for presenting PDF files that contain a set of slides.  It has many features and niceties for making life easier for the person delivering the presentation.

-- URL for the project homepage or repository.
Homepage:            http://michaeldadams.org/projects/haskell-pdf-presenter/

-- The license under which the package is released.
License:             GPL-3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Michael D. Adams

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          Michael D. Adams <http://michaeldadams.org/>

-- A copyright notice.
Copyright:           (c) 2012-2013, Michael D. Adams

Category:            Application, Graphics, PDF

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  README, TODO, HaskellPdfPresenter.glade, Makefile

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6

Executable hpdfp
  -- .hs or .lhs file containing the Main module.
  Main-is: HaskellPdfPresenter.hs
  
  -- Packages needed in order to build this package.
  Build-depends: base == 4.*, bytestring >= 0.9, containers >= 0.1, directory >= 1.0,
                 filepath >= 1.0, template-haskell >= 2.2, zlib == 0.5.*,
                 split >= 0.1, old-locale, time >= 1.1.2.0,
                 glib, poppler == 0.12.2.*, gtk >= 0.12.2, cairo
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
